kubernetes/services/navidrome/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
  labels:
    name: navidrome
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
